@startuml

title __CONTOROLLERS's Class Diagram__\n

  namespace jp.ac.shibaura.it.ie {
    namespace contorollers {
      class jp.ac.shibaura.it.ie.contorollers.AuthController {
          + entry()
          + login()
          + logout()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace contorollers {
      class jp.ac.shibaura.it.ie.contorollers.CategoryContoroller {
          + categoryJoin()
          + categoryList()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace contorollers {
      class jp.ac.shibaura.it.ie.contorollers.ImageContoroller {
          + imageList()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace contorollers {
      class jp.ac.shibaura.it.ie.contorollers.RoomController {
          + roomExit()
          + roomWait()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace contorollers {
      class jp.ac.shibaura.it.ie.contorollers.UserController {
          + userUpdate()
      }
    }
  }
  

  jp.ac.shibaura.it.ie.contorollers.AuthController o-- jp.ac.shibaura.it.ie.domain.application.auth.AuthEntryInteractor : authEntryInteractor
  jp.ac.shibaura.it.ie.contorollers.AuthController o-- jp.ac.shibaura.it.ie.domain.application.auth.AuthLoginInteractor : authLoginInteractor
  jp.ac.shibaura.it.ie.contorollers.AuthController o-- jp.ac.shibaura.it.ie.domain.application.auth.AuthLogoutInteractor : authLogoutInteractor
  jp.ac.shibaura.it.ie.contorollers.AuthController o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.contorollers.AuthController o-- jp.ac.shibaura.it.ie.domain.application.session.SessionInteractor : sessionInteractor
  jp.ac.shibaura.it.ie.contorollers.CategoryContoroller o-- jp.ac.shibaura.it.ie.domain.application.category.CategoryJoinInteractor : categoryJoinInteractor
  jp.ac.shibaura.it.ie.contorollers.CategoryContoroller o-- jp.ac.shibaura.it.ie.domain.application.category.CategoryListInteractor : categoryListInteractor
  jp.ac.shibaura.it.ie.contorollers.CategoryContoroller o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.contorollers.CategoryContoroller o-- jp.ac.shibaura.it.ie.domain.application.session.SessionInteractor : sessionInteractor
  jp.ac.shibaura.it.ie.contorollers.ImageContoroller o-- jp.ac.shibaura.it.ie.domain.application.image.ImageListInteractor : imageListInteractor
  jp.ac.shibaura.it.ie.contorollers.ImageContoroller o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.contorollers.ImageContoroller o-- jp.ac.shibaura.it.ie.domain.application.session.SessionInteractor : sessionInteractor
  jp.ac.shibaura.it.ie.contorollers.RoomController o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.contorollers.RoomController o-- jp.ac.shibaura.it.ie.domain.application.room.RoomExitInteractor : roomExitInteractor
  jp.ac.shibaura.it.ie.contorollers.RoomController o-- jp.ac.shibaura.it.ie.domain.application.room.RoomWaitInteractor : roomWaitInteractor
  jp.ac.shibaura.it.ie.contorollers.RoomController o-- jp.ac.shibaura.it.ie.domain.application.session.SessionInteractor : sessionInteractor
  jp.ac.shibaura.it.ie.contorollers.UserController o-- jp.ac.shibaura.it.ie.domain.application.user.UserUpdateInteractor : userUpdateInteractor
  jp.ac.shibaura.it.ie.contorollers.UserController o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.contorollers.UserController o-- jp.ac.shibaura.it.ie.domain.application.session.SessionInteractor : sessionInteractor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
